2011-04-14  Jarkko Sakkinen  <jarkko.j.sakkinen@gmail.com>

Reviewed by Benjamin Poulain.

        [Qt] GraphicsContext3D internal buffers are not freed
        https://bugs.webkit.org/show_bug.cgi?id=57530

        * platform/graphics/qt/GraphicsContext3DQt.cpp:
        (WebCore::GraphicsContext3DInternal::~GraphicsContext3DInternal):

Canonical link: https://commits.webkit.org/73591@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83834 268f45cc-cd09-0410-ab3c-d52691b4dbfc